bug 41950 Preventing garbage content lengths from cache. r=neeti